1998-12-28  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* List_GEN.m ([TARGET -_createPermutedIndex_:forIndexSubclass:]): 
	Use -setCollection: instead of +createBegin:forCollection:.

	* collections.h: Change all count arguments to unsigned.
	(PermutedIndex): Remove generatePermutation.
	(ArchiverKeyword, ArchiverArray, ArchiverValue,
	ArchiverPair): Add protocol summary and description strings.

	* Permutation.m ([Permutation_c -createEnd]): Check for a 
	collection and generatePermutation when finished.

	* Permutation.[hm], collections.h: Remove
	+createBegin:forCollection:. Add setCollection:.

	* Collection.m ([Collection_any -beginPermuted:aZone]): Use 
	setCollection: instead of removed +createBegin:forCollection:.
	([PermutedIndex_c +createBegin:]): Likewise.
	([PermutedIndex_c generatePermutation]): Remove.

	* Collection.h: Change count arguments from int to unsigned.
	Declare setCollection: and setUniformRandom:.  Don't
	declare generatePermutation.

	* Array.[hm]: Change count arguments from int to unsigned.

1998-12-26  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* collections.h (Collection): Declare -beginPermuted:.
	(PermutedIndex): Declare generatePermutation.

	* Collection.m ([Collection_any -beginPermuted:]): Eliminate
	temporary variable.

1998-12-22  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* Collection.h (PermutedIndex_c): Remove +createBegin:.
	(PermutedIndex_c): Add +createBegin:forCollection:.

	* Collection.m ([Collection_any -beginPermuted:aZone]): 
	Modify to support new PermutedIndex class.
	([PermutedIndex_c +createBegin:]): Remove.
	([PermutedIndex_c +createBegin:forCollection:]): Add.
	([PermutedIndex_c -createEnd]): Modify to support new Permutation 
	class.
	([PermutedIndex_c -setUniformRandom:]): Allow setting of 
	distribution of the shuffler used to generate Permutation.
	([PermutedIndex_c -generatePermutation]): Modify to support new 
	Permutation class.
	([PermutedIndex_c -next]): Delegate the message to the index 